# nn

./: .gitignore  CMakeLists.txt  COMPREHENSIVE_TEST_VERIFICATION_REPORT.md  CRASH_PREVENTION_ANALYSIS.md  DATA_ACQUISITION_AND_LEARNING.md  PHASE_3_COMPLETION_REPORT.md  QUICK_START_CLI.md  TDD_FINAL_REPORT.md  TDD_ISSUES_REPORT.md  dpan_config.yaml  quick_test.sh  run_all_tests.sh  test_debug.sh  test_with_timeout.sh
docs/: Association_Integration_Guide.md  Association_Performance_Guide.md  Attention_Mechanisms_Granular_Tasks.md  Attention_Mechanisms_Implementation_Plan.md  CLI_Colorized_Output.md  DPAN_API_Reference.md  DPAN_CLI_Guide.md  DPAN_CLI_TDD_Report.md  DPAN_Capability_Evaluation.md  DPAN_Design_Document.md  DPAN_Implementation_Plan.md  DPAN_User_Guide.md  Phase1_Detailed_Implementation_Plan.md  Phase2_Detailed_Implementation_Plan.md  Phase3_Detailed_Implementation_Plan.md  TEST_SUMMARY.md
examples/: CMakeLists.txt  anomaly_detection.cpp  basic_example.cpp  time_series_patterns.cpp
examples/association/: CMakeLists.txt  activation_propagation_demo.cpp  basic_learning.cpp  custom_formation_rules.cpp
examples/training_data/: basic_conversation.txt
include/cli/: cli_config.hpp
include/learning/: association_attention_head.hpp  attention_mechanism.hpp  attention_utils.hpp  basic_attention.hpp  context_aware_attention.hpp  multi_head_attention.hpp  pattern_importance.hpp  self_attention.hpp  semantic_attention_head.hpp  structural_attention_head.hpp  temporal_attention_head.hpp
src/association/: CMakeLists.txt  association_edge.cpp  association_edge.hpp  association_learning_system.cpp  association_learning_system.hpp  association_matrix.cpp  association_matrix.hpp  categorical_learner.cpp  categorical_learner.hpp  co_occurrence_tracker.cpp  co_occurrence_tracker.hpp  competitive_learner.cpp  competitive_learner.hpp  formation_rules.cpp  formation_rules.hpp  reinforcement_manager.cpp  reinforcement_manager.hpp  spatial_learner.cpp  spatial_learner.hpp  strength_normalizer.cpp  strength_normalizer.hpp  temporal_learner.cpp  temporal_learner.hpp
src/cli/: CMakeLists.txt  cli_config.cpp  dpan_cli.cpp  dpan_cli.hpp
src/core/: CMakeLists.txt  pattern_data.cpp  pattern_data.hpp  pattern_engine.cpp  pattern_engine.hpp  pattern_node.cpp  pattern_node.hpp  types.cpp  types.hpp
src/discovery/: CMakeLists.txt  pattern_creator.cpp  pattern_creator.hpp  pattern_extractor.cpp  pattern_extractor.hpp  pattern_matcher.cpp  pattern_matcher.hpp  pattern_refiner.cpp  pattern_refiner.hpp
src/learning/: association_attention_head.cpp  attention_utils.cpp  basic_attention.cpp  context_aware_attention.cpp  multi_head_attention.cpp  pattern_importance.cpp  (+4 more)
src/memory/: CMakeLists.txt  adaptive_thresholds.cpp  adaptive_thresholds.hpp  archive_tier.cpp  association_pruner.cpp  association_pruner.hpp  cold_tier.cpp  consolidator.cpp  consolidator.hpp  decay_functions.hpp  interference.cpp  interference.hpp  memory_manager.cpp  memory_manager.hpp  memory_tier.cpp  memory_tier.hpp  pattern_pruner.cpp  pattern_pruner.hpp  sleep_consolidator.cpp  sleep_consolidator.hpp  tier_manager.cpp  tier_manager.hpp  tiered_storage.cpp  tiered_storage.hpp  utility_calculator.cpp  utility_calculator.hpp  utility_tracker.cpp  utility_tracker.hpp  warm_tier.cpp
src/similarity/: CMakeLists.txt  contextual_similarity.cpp  contextual_similarity.hpp  frequency_similarity.cpp  frequency_similarity.hpp  geometric_similarity.cpp  geometric_similarity.hpp  similarity_metric.cpp  similarity_metric.hpp  similarity_search.cpp  similarity_search.hpp  statistical_similarity.cpp  statistical_similarity.hpp
src/storage/: CMakeLists.txt  lru_cache.hpp  memory_backend.cpp  memory_backend.hpp  pattern_database.cpp  pattern_database.hpp  persistent_backend.cpp  persistent_backend.hpp
src/storage/indices/: CMakeLists.txt  temporal_index.cpp  temporal_index.hpp
tests/: CMakeLists.txt  edge_case_tests.cpp
tests/association/: CMakeLists.txt  association_edge_test.cpp  association_learning_system_test.cpp  association_matrix_test.cpp  categorical_learner_test.cpp  co_occurrence_tracker_test.cpp  competitive_learner_test.cpp  formation_rules_test.cpp  reinforcement_manager_test.cpp  spatial_learner_test.cpp  strength_normalizer_test.cpp  temporal_learner_test.cpp
tests/benchmarks/: CMakeLists.txt  association_benchmarks.cpp  cli_benchmarks.cpp  concurrency_tests.cpp  storage_benchmarks.cpp  stress_tests.cpp
tests/cli/: CMakeLists.txt  cli_config_test.cpp  dpan_cli_test.cpp
tests/core/: CMakeLists.txt  context_vector_test.cpp  pattern_data_test.cpp  pattern_engine_test.cpp  pattern_node_test.cpp  types_test.cpp
tests/discovery/: CMakeLists.txt  pattern_creator_test.cpp  pattern_extractor_test.cpp  pattern_matcher_test.cpp  pattern_refiner_test.cpp
tests/integration/: CMakeLists.txt  integration_test.cpp
tests/learning/: CMakeLists.txt  association_attention_head_test.cpp  attention_test_fixtures.hpp  attention_utils_test.cpp  basic_attention_test.cpp  context_aware_attention_test.cpp  multi_head_attention_test.cpp  pattern_importance_test.cpp  relationship_discovery_test.cpp  self_attention_integration_test.cpp  self_attention_test.cpp  semantic_attention_head_test.cpp  structural_attention_head_test.cpp  temporal_attention_head_test.cpp
tests/memory/: CMakeLists.txt  adaptive_thresholds_test.cpp  association_pruner_test.cpp  consolidator_test.cpp  decay_functions_test.cpp  interference_test.cpp  memory_manager_test.cpp  memory_tier_test.cpp  pattern_pruner_test.cpp  sleep_consolidator_test.cpp  tier_manager_test.cpp  tiered_storage_test.cpp  utility_calculator_test.cpp  utility_tracker_test.cpp
tests/similarity/: CMakeLists.txt  contextual_similarity_test.cpp  frequency_similarity_test.cpp  geometric_similarity_test.cpp  similarity_metric_test.cpp  similarity_search_test.cpp  statistical_similarity_test.cpp
tests/storage/: CMakeLists.txt  lru_cache_test.cpp  memory_backend_test.cpp  pattern_database_test.cpp  persistent_backend_test.cpp
tests/storage/indices/: CMakeLists.txt  temporal_index_test.cpp
