# Tests CMakeLists.txt
cmake_minimum_required(VERSION 3.20)

# Test subdirectories
add_subdirectory(core)
add_subdirectory(storage)
add_subdirectory(similarity)
add_subdirectory(discovery)
add_subdirectory(association)
add_subdirectory(memory)
add_subdirectory(integration)
add_subdirectory(benchmarks)
